# mailing_management_service

./: .env.sample  README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blog/templatetags/: my_tags.py
client/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py  0002_client_user_alter_client_phone.py
client/templates/client/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
config/: settings.py  urls.py
home/: apps.py  urls.py  views.py
home/templates/home/: base.html  home.html
home/templates/home/includes/: inc_menu.html
mailing/: admin.py  apps.py  cron.py  forms.py  models.py  urls.py  views.py
mailing/migrations/: 0001_initial.py  0002_mailingsettings_mailinglogs.py  0003_alter_mailingsettings_user.py
mailing/templates/mailing/: mailinglogs_list.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
users/: admin.py  forms.py  models.py  urls.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py  0002_user_verification_key.py
users/templates/users/: login.html  register.html  user_form.html
users/views/: cbv.py  fbv.py
