[tool.poetry]
name = "mailing-management-service"
version = "0.1.0"
description = ""
authors = ["Alexander Perov <perov97@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"
ipython = "^8.17.2"
pytils = "^0.4.1"
python-dotenv = "^1.0.0"
pillow = "^10.1.0"
django-crontab = "^0.7.1"
redis = "^5.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
